--- a/03tour/index.html
+++ b/03tour/index.html
@@ -10,6 +10,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/jquery.bxslider.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('.slider01').bxSlider({
+                pagerCustom:'.bxpager',
+                mode:'vertical'
+            });
+        });
+    </script>
 </head>
 <body>
     <!-- header start -->
@@ -53,55 +64,214 @@
                 <div class="rsv_slider">
                     <ul class="slider01">
                         <li>
-                            <form action="#" method="POST">
+                            <form action="#" class="form">
                                 <fieldset>
-                                    <label for="country" class="rsc_country">가고싶은 나라를 선택하세요.</label>
-                                    <select name="country" id="country">
-                                        <option value="선택하세요." selected>선택하세요.</option>
-                                        <option value="유럽">유럽</option>
-                                        <option value="일본">일본</option>
-                                        <option value="중국">중국</option>
-                                        <option value="홍콩">홍콩</option>
-                                        <option value="미국">미국</option>
-                                    </select>
+                                    <legend class="blind">여행일정</legend>
+                                    <ul>
+                                        <li class="mb14">
+                                            <label for="golo">가고싶은 나라를 선택하세요.</label>
+                                            <select name="golo" id="golo" class="golo">
+                                                <option value="">선택하세요</option>
+                                                <option value="미국">미국</option>
+                                                <option value="중국">중국</option>
+                                                <option value="일본">일본</option>
+                                                <option value="홍콩">홍콩</option>
+                                            </select>
+                                        </li>
+                                        <li class="clearfix mb14">
+                                            <div class="left">
+                                                <label for="sdate">출발일</label>
+                                                <input type="date" id="sdate">
+                                            </div>
+                                            <div class="right">
+                                                <label for="edate">도착일</label>
+                                                <input type="date" id="edate">
+                                            </div>
+                                        </li>
+                                        <li class="clearfix mb23">
+                                            <div class="gleft">
+                                                <label for="grade">좌석등급</label>
+                                                <select name="grade" id="grade">
+                                                    <option value="">선택</option>
+                                                    <option value="비즈니스">비즈니스</option>
+                                                    <option value="이코노미">이코노미</option>
+                                                </select>
+                                            </div>
+                                            <div class="gright clearfix">
+                                                <div class="adult">
+                                                    <label for="num">성인</label>
+                                                    <input type="number" id="num" placeholder="1">
+                                                </div>
+                                                <div class="kids">
+                                                    <label for="num">아이</label>
+                                                    <input type="number" id="num" placeholder="1">
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ul>
                                 </fieldset>
+                                <input type="submit" value="예약하기" class="btn_rsv">
+                            </form>
+                        </li>
+                        <li>
+                            <form action="#" class="form">
                                 <fieldset>
-                                    <label for="g_date" class="g_date">출발일</label>
-                                    <input type="text" id="g_date" placeholder="2014/12/01" class="gdateinp">
-                                    <input type="button" id="g_date" class="gdatebtn" value="출발일">
-
-                                    <label for="b_date" class="b_date">도착일</label>
-                                    <input type="text" id="b_date" placeholder="2014/12/01" class="bdateinp">
-                                    <input type="button" id="b_date" class="bdatebtn" value="도착일">
+                                    <legend class="blind">여행일정</legend>
+                                    <ul>
+                                        <li class="mb14">
+                                            <label for="golo">가고싶은 나라를 선택하세요.</label>
+                                            <select name="golo" id="golo" class="golo">
+                                                <option value="">선택하세요</option>
+                                                <option value="미국">미국</option>
+                                                <option value="중국">중국</option>
+                                                <option value="일본">일본</option>
+                                                <option value="홍콩">홍콩</option>
+                                            </select>
+                                        </li>
+                                        <li class="clearfix mb14">
+                                            <div class="left">
+                                                <label for="sdate">출발일</label>
+                                                <input type="date" id="sdate">
+                                            </div>
+                                            <div class="right">
+                                                <label for="edate">도착일</label>
+                                                <input type="date" id="edate">
+                                            </div>
+                                        </li>
+                                        <li class="clearfix mb23">
+                                            <div class="gleft">
+                                                <label for="grade">좌석등급</label>
+                                                <select name="grade" id="grade">
+                                                    <option value="">선택</option>
+                                                    <option value="비즈니스">비즈니스</option>
+                                                    <option value="이코노미">이코노미</option>
+                                                </select>
+                                            </div>
+                                            <div class="gright clearfix">
+                                                <div class="adult">
+                                                    <label for="num">성인</label>
+                                                    <input type="number" id="num" placeholder="1">
+                                                </div>
+                                                <div class="kids">
+                                                    <label for="num">아이</label>
+                                                    <input type="number" id="num" placeholder="1">
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ul>
                                 </fieldset>
+                                <input type="submit" value="예약하기" class="btn_rsv">
+                            </form>
+                        </li>
+                        <li>
+                            <form action="#" class="form">
                                 <fieldset>
-                                    <label for="seat" class="seat">좌석등급</label>
-                                    <select name="seat" id="seat">
-                                        <option value="이코노미" selected>이코노미</option>
-                                        <option value="비지니스">비지니스</option>
-                                        <option value="퍼스트">퍼스트</option>
-                                    </select>
-                                    <label for="person" class="person">성인</label>
-                                    <select name="person" id="person">
-                                        <option value="1" selected>1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                    </select>
-                                    <label for="kids" class="kids">아이</label>
-                                    <select name="kids" id="kids">
-                                        <option value="1" selected>1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                    </select>
+                                    <legend class="blind">여행일정</legend>
+                                    <ul>
+                                        <li class="mb14">
+                                            <label for="golo">가고싶은 나라를 선택하세요.</label>
+                                            <select name="golo" id="golo" class="golo">
+                                                <option value="">선택하세요</option>
+                                                <option value="미국">미국</option>
+                                                <option value="중국">중국</option>
+                                                <option value="일본">일본</option>
+                                                <option value="홍콩">홍콩</option>
+                                            </select>
+                                        </li>
+                                        <li class="clearfix mb14">
+                                            <div class="left">
+                                                <label for="sdate">출발일</label>
+                                                <input type="date" id="sdate">
+                                            </div>
+                                            <div class="right">
+                                                <label for="edate">도착일</label>
+                                                <input type="date" id="edate">
+                                            </div>
+                                        </li>
+                                        <li class="clearfix mb23">
+                                            <div class="gleft">
+                                                <label for="grade">좌석등급</label>
+                                                <select name="grade" id="grade">
+                                                    <option value="">선택</option>
+                                                    <option value="비즈니스">비즈니스</option>
+                                                    <option value="이코노미">이코노미</option>
+                                                </select>
+                                            </div>
+                                            <div class="gright clearfix">
+                                                <div class="adult">
+                                                    <label for="num">성인</label>
+                                                    <input type="number" id="num" placeholder="1">
+                                                </div>
+                                                <div class="kids">
+                                                    <label for="num">아이</label>
+                                                    <input type="number" id="num" placeholder="1">
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ul>
                                 </fieldset>
-                                <input type="submit" value="search" class="rsv_search">
+                                <input type="submit" value="예약하기" class="btn_rsv">
+                            </form>
+                        </li>
+                        <li>
+                            <form action="#" class="form">
+                                <fieldset>
+                                    <legend class="blind">여행일정</legend>
+                                    <ul>
+                                        <li class="mb14">
+                                            <label for="golo">가고싶은 나라를 선택하세요.</label>
+                                            <select name="golo" id="golo" class="golo">
+                                                <option value="">선택하세요</option>
+                                                <option value="미국">미국</option>
+                                                <option value="중국">중국</option>
+                                                <option value="일본">일본</option>
+                                                <option value="홍콩">홍콩</option>
+                                            </select>
+                                        </li>
+                                        <li class="clearfix mb14">
+                                            <div class="left">
+                                                <label for="sdate">출발일</label>
+                                                <input type="date" id="sdate">
+                                            </div>
+                                            <div class="right">
+                                                <label for="edate">도착일</label>
+                                                <input type="date" id="edate">
+                                            </div>
+                                        </li>
+                                        <li class="clearfix mb23">
+                                            <div class="gleft">
+                                                <label for="grade">좌석등급</label>
+                                                <select name="grade" id="grade">
+                                                    <option value="">선택</option>
+                                                    <option value="비즈니스">비즈니스</option>
+                                                    <option value="이코노미">이코노미</option>
+                                                </select>
+                                            </div>
+                                            <div class="gright clearfix">
+                                                <div class="adult">
+                                                    <label for="num">성인</label>
+                                                    <input type="number" id="num" placeholder="1">
+                                                </div>
+                                                <div class="kids">
+                                                    <label for="num">아이</label>
+                                                    <input type="number" id="num" placeholder="1">
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </fieldset>
+                                <input type="submit" value="예약하기" class="btn_rsv">
                             </form>
                         </li>
                     </ul>
+                    <div class="slider01Pager">
+                        <div class="bxpager clearfix">
+                            <a href="#" data-slide-index="0">공항예약</a>
+                            <a href="#" data-slide-index="1">호텔예약</a>
+                            <a href="#" data-slide-index="2">렌트카</a>
+                            <a href="#" data-slide-index="3">휴양지</a>
+                        </div>
+                    </div>
                 </div>
                 <ul class="conT_card">
                     <li><a href="#">
