--- a/03tour/index.html
+++ b/03tour/index.html
@@ -76,6 +76,12 @@
     <!-- content start -->
     <div id="content"> <!-- 100% + 배경-->
         <div class="conTop clearfix mb16"> <!-- 980px-->
+            <img src="images/bal06.png" alt="" class="bal06">
+            <img src="images/bal05.png" alt="" class="bal05">
+            <img src="images/bal04.png" alt="" class="bal04">
+            <img src="images/bal03.png" alt="" class="bal03">
+            <img src="images/bal02.png" alt="" class="bal02">
+            <img src="images/bal01.png" alt="" class="bal01">
             <div class="conTop_left">
                 <div class="rsv_slider mb16">
                     <div class="sliderWrap">
@@ -316,7 +322,7 @@
                     하이미디어와 여행을 떠나자<i><b>!</b></i></p>
             </div>
         </div>
-        <div class="conM clearfix">
+        <div class="conM clearfix mb16">
             <div class="slider02Wrap">
                 <ul class="slider02">
                     <li><a href="#">
@@ -410,12 +416,99 @@
                 </div>
             </div>
         </div>
-        <div class="conB clearfix">
-            <ul>
-                <li>
-                    <img src="" alt="">
+        <div class="conB">
+            <ul class="conB_warp clearfix">
+                <li class="conB_card">
+                    <img src="images/info01.png" alt="">
+                    <div class="bg"></div>
+                    <div class="conB_txt">
+                        <div class="box">
+                            <div class="notice">
+                                <img src="images/info01_icon.png" alt="">
+                                <h5>여행정보</h5>
+                            </div>
+                            <h6>다양한 나라의 명소와 맛집 등<br>
+                                상세한 정보를 볼 수 있습니다.
+                            </h6>
+                        </div>
+                        <div class="circle">
+                            <div class="bar1"></div>
+                            <div class="bar2"></div>
+                        </div>
+                    </div>
+                </li>
+                <li class="conB_card">
+                    <img src="images/info02.png" alt="">
+                    <div class="bg"></div>
+                    <div class="conB_txt">
+                        <div class="box">
+                            <div class="notice">
+                                <img src="images/info02_icon.png" alt="">
+                                <h5>맛집정보</h5>
+                            </div>
+                            <h6>다양한 나라의 명소와 맛집 등<br>
+                                상세한 정보를 볼 수 있습니다.
+                            </h6>
+                        </div>
+                        <div class="circle">
+                            <div class="bar1"></div>
+                            <div class="bar2"></div>
+                        </div>
+                    </div>
+                </li>
+                <li class="conB_card">
+                    <img src="images/info03.png" alt="">
+                    <div class="bg"></div>
+                    <div class="conB_txt">
+                        <div class="box">
+                            <div class="notice">
+                                <img src="images/info03_icon.png" alt="">
+                                <h5>숙박정보</h5>
+                            </div>
+                            <h6>다양한 나라의 명소와 맛집 등<br>
+                                상세한 정보를 볼 수 있습니다.
+                            </h6>
+                        </div>
+                        <div class="circle">
+                            <div class="bar1"></div>
+                            <div class="bar2"></div>
+                        </div>
+                    </div>
+                </li>
+                <li class="conB_card mr0">
+                    <img src="images/info04.png" alt="">
+                    <div class="bg"></div>
+                    <div class="conB_txt">
+                        <div class="box">
+                            <div class="notice">
+                                <img src="images/info04_icon.png" alt="">
+                                <h5>여행자후기</h5>
+                            </div>
+                            <h6>다양한 나라의 명소와 맛집 등<br>
+                                상세한 정보를 볼 수 있습니다.
+                            </h6>
+                        </div>
+                        <div class="circle">
+                            <div class="bar1"></div>
+                            <div class="bar2"></div>
+                        </div>
+                    </div>
                 </li>
             </ul>
+        </div>
+        <div id="footer" class="clearfix">
+            <h1><a href="#">tour</a></h1>
+            <div class="f_right">
+                <ul class="clearfix">
+                    <li><a href="#">이용약관</a></li>
+                    <li class="fw700"><a href="#">개인정보취급방침</a></li>
+                    <li><a href="#">사이트맵</a></li>
+                    <li><a href="#">고객센터</a></li>
+                    <li><a href="#">광고 및 제휴문의</a></li>
+                </ul>
+                <p>123-456  서울특별시 구로구 구로동 (주)하이미디어  사업자등록번호:  123-45-678910  대표이사 : 홍길동  대표번호 :  02-1234- 5678<br>
+                COPYRIGHT©2014 HIMEDIA TOUR.ALL RIGHTS RESERVED.</p>
+            </div>
         </div>
     </div>
     <!-- content end -->
