--- a/03tour/index.html
+++ b/03tour/index.html
@@ -75,13 +75,15 @@
 
     <!-- content start -->
     <div id="content"> <!-- 100% + 배경-->
+        <img src="images/reallyAir.png" alt="airplane" class="air01">
+        <img src="images/reallyAir3.png" alt="airplane2" class="air02">
         <div class="conTop clearfix mb16"> <!-- 980px-->
-            <img src="images/bal06.png" alt="" class="bal06">
-            <img src="images/bal05.png" alt="" class="bal05">
-            <img src="images/bal04.png" alt="" class="bal04">
-            <img src="images/bal03.png" alt="" class="bal03">
-            <img src="images/bal02.png" alt="" class="bal02">
-            <img src="images/bal01.png" alt="" class="bal01">
+            <img src="images/bal06.png" alt="풍선6" class="bal06">
+            <img src="images/bal05.png" alt="풍선5" class="bal05">
+            <img src="images/bal04.png" alt="풍선4" class="bal04">
+            <img src="images/bal03.png" alt="풍선3" class="bal03">
+            <img src="images/bal02.png" alt="풍선2" class="bal02">
+            <img src="images/bal01.png" alt="풍선1" class="bal01">
             <div class="conTop_left">
                 <div class="rsv_slider mb16">
                     <div class="sliderWrap">
