--- a/03tour/index.html
+++ b/03tour/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/jquery.bxslider.js"></script>
@@ -43,7 +44,7 @@
     <header id="header">
         <div class="hdTopWrap"> <!-- 100% -->
             <div class="hdTop"> <!-- 980px -->
-                <h1><a href="#">tour</a></h1>
+                <h1><a href="index.html">tour</a></h1>
                 <form action="#" method="POST">
                     <label for="search" class="searchTitle">search</label>
                     <input type="text" id="search" placeholder="검색어를 입력하세요." class="searchInp">
@@ -62,12 +63,12 @@
         </div>
         <div class="hdDownWrap">
             <ul class="hdDown clearfix">
-                <li><a href="#">여행도시</a></li>
-                <li><a href="#">호텔예약</a></li>
-                <li><a href="#">렌트카</a></li>
-                <li><a href="#">여행TIP</a></li>
-                <li><a href="#">회사소개</a></li>
-                <li><a href="#">커뮤니티</a></li>
+                <li><a href="citytour.html">여행도시</a></li>
+                <li><a href="hotel.html">호텔예약</a></li>
+                <li><a href="rentcar.html">렌트카</a></li>
+                <li><a href="tourtip.html">여행TIP</a></li>
+                <li><a href="company.html">회사소개</a></li>
+                <li><a href="community.html">커뮤니티</a></li>
             </ul>
         </div>
     </header>
