--- a/gabia/index.html
+++ b/gabia/index.html
@@ -42,7 +42,7 @@
                     </h3>
                     <p>판매,마케팅 그리고 브랜드 인지도까지 온라인 판매 대행 무료 지원!</p>
                     <div class="btn">
-                        <p>자세히보기</p>
+                        <a href="#">자세히보기</a>
                     </div>
                 </div>
             </div>
@@ -55,7 +55,7 @@
                     </h3>
                     <p>구독 클릭+댓글 작성 시 아메리카노 증정</p>
                     <div class="btn">
-                        <p>자세히보기</p>
+                        <a href="#">자세히보기</a>
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                     </h3>
                     <p>SMS/알림톡 19만건 추가 지급까지!</p>
                     <div class="btn">
-                        <p>바로가기</p>
+                        <a href="#">바로가기</a>
                     </div>
                 </div>
             </div>
@@ -81,7 +81,7 @@
                     </h3>
                     <p>2016년부터 6년 연속 선정, 가비아 CNS</p>
                     <div class="btn">
-                        <p>자세히보기</p>
+                        <a href="#">자세히보기</a>
                     </div>
                 </div>
             </div>
@@ -94,19 +94,28 @@
                     </h3>
                     <p>골드서플라이어(GGS) 멤버십 및 GGS 플러스 멤버십 단기 할인 프로모션</p>
                     <div class="btn">
-                        <p>자세히보기</p>
+                        <a href="#">자세히보기</a>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
         <div class="swiper-pagination"></div>
     </div>
 
     <script>
         var swiper = new Swiper(".slider01",{
+            slidesPerView: 1,
+            spaceBetween: 30,
             loop:true,
             pagination: {
                 el: ".swiper-pagination",
+                clickable: true,
+            },
+            navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
             },
         });
     </script>
