--- a/gabia/index.html
+++ b/gabia/index.html
@@ -103,6 +103,103 @@
         <div class="swiper-button-prev"></div>
         <div class="swiper-pagination"></div>
     </div>
+    <div id="section1">
+        <div class="sec1U_Wrap">
+            <h3>해외 마켓 전문가가<br>수출을 도와드립니다</h3>
+            <ul class="clearfix">
+                <li class="clearfix">
+                    <div class="u_left">
+                        <img src="images/sec1logo_amazon.png" alt="">
+                    </div>
+                    <div class="u_right">
+                        <h2>아마존 입점</h2>
+                        <p>전 세계 3억명의 아마존 고객을 대상으로<br>고객사의 온라인 스토어를 오픈 및 운영 대행</p>
+                    </div>
+                </li>
+                <li class="clearfix">
+                    <div class="u_left">
+                        <img src="images/sec1logo_alibaba.png" alt="">
+                    </div>
+                    <div class="u_right">
+                        <h2>알리바바 입점</h2>
+                        <p>글로벌 최대 온라인 B2B 플랫폼 알리바바닷컴의 공식파트너<br>알리바바 입점 및 운영 대행</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="sec1B_Wrap">
+            <h3>글로벌 쇼핑몰 제작,<br>국내몰 운영도 가능합니다</h3>
+            <ul class="clearfix">
+                <li class="clearfix">
+                    <div class="u_left">
+                        <img src="images/sec1logo_shoppingmall.png" alt="">
+                    </div>
+                    <div class="u_right">
+                        <h2>쇼핑몰 제작</h2>
+                        <p>글로벌 솔루션 (마젠토, 우커머스) 기반의 글로벌 쇼핑몰 제작
+                            <br>국내 쇼핑몰 (가비아 퍼스트몰)</p>
+                    </div>
+                </li>
+                <li class="clearfix">
+                    <div class="u_left">
+                        <img src="images/sec1logo_domestic.png" alt="">
+                    </div>
+                    <div class="u_right">
+                        <h2>국내몰 운영</h2>
+                        <p>자사몰 운영대행<br>제휴 판매 채널 입점 및 운영 대행</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        </div>
+    </div>
+    <div id="section2">
+        <div class="sec2_Wrap clearfix">
+            <h3>가비아 글로벌이<br>더 특별한 이유</h3>
+            <ul class="clearfix">
+                <li class="clearfix">
+                    <img src="images/ico_special1.png" alt="">
+                    <p>
+                        중진공 온라인 수출 지원사업<br>6년 연속 공식 수행기관
+                    </p>
+                </li>
+                <li class="clearfix">
+                    <img src="images/ico_special2.png" alt="">
+                    <p>
+                        알리바바 닷컴 한국 공식 파트너<br>2019년 한국 파트너사<br>종합 평가 1위
+                    </p>
+                </li>
+                <li class="clearfix">
+                    <img src="images/ico_special3.png" alt="">
+                    <p>
+                        중소벤처기업부 지정<br>수출유망중소기업
+                    </p>
+                </li>
+                <li class="clearfix">
+                    <img src="images/ico_special4.png" alt="">
+                    <p>
+                        수출바우처 사업<br>공식 수행기관
+                    </p>
+                </li>
+                <li class="clearfix">
+                    <img src="images/ico_special5.png" alt="">
+                    <p>
+                        산업통산자원부, 한국무역협회 지정<br>전문무역상사
+                    </p>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div id="section3">
+        <div class="sec3_Wrap">
+            <h3>간단한 궁금증이라도 지금 바로 확인해보세요</h3>
+            <p>가비아CNS의 해외 마켓 전문가가 답변을 드립니다.</p>
+            <h4>070-4331-5361</h4>
+            <button>
+                <p>상담하기</p>
+            </button>
+        </div>
+    </div>
 
     <script>
         var swiper = new Swiper(".slider01",{
