--- a/gabia/index.html
+++ b/gabia/index.html
@@ -200,6 +200,135 @@
             </button>
         </div>
     </div>
+    <div id="section4">
+        <div class="sec4_Wrap">
+            <h3>가비아 글로벌의 새소식</h3>
+            <ul class="clearfix">
+                <li><a href="#">
+                    <img src="images/sec4_01.jpeg" alt="">
+                    <div class="tag">
+                        <p>새소식</p>
+                        <p>공지</p>
+                    </div>
+                    <div class="sec4_txt">
+                        <h4>[소상공인 모집중] 해외쇼핑몰 입점과 마케팅을 무료<br>
+                            로 지원받으세요!
+                        </h4>
+                        <h5>&nbsp;정부의 온라인 판매 지원사업으로 상품 등록, 배송, 마케<br>
+                            팅 등 판매에 필요한 모든 과정을 지원합니다.
+                        </h5>
+                        <p>2021.06.17</p>
+                    </div>
+                </a></li>
+                <li><a href="#">
+                    <img src="images/sec4_02.jpeg" alt="">
+                    <div class="tag">
+                        <p>새소식</p>
+                        <p>이벤트</p>
+                    </div>
+                    <div class="sec4_txt">
+                        <h4>[8,9월 할인 안내] 알리바바닷컴 골드서플라이어<br>
+                            (GGS) 멤버십 단기 프로모션
+                        </h4>
+                        <h5>알리바바닷컴 공식파트너사 가비아CNS 입니다. 알리바<br>
+                            바닷컴에서 제공하는 골드서플라이어(GGS) 멤버...
+                        </h5>
+                        <p>2021.06.15</p>
+                    </div>
+                </a></li>
+                <li><a href="#">
+                    <img src="images/sec4_03.png" alt="">
+                    <div class="tag">
+                        <p>새소식</p>
+                        <p>공지</p>
+                    </div>
+                    <div class="sec4_txt">
+                        <h4>[모집종료] 아마존 판매 대행 무료! 신청 및 문의 전화<br>
+                            070-4331-5317
+                        </h4>
+                        <h5>정부의 온라인 수출 지원사업으로, 상품 등록, 배송 등 해<br>
+                            외 판매에 필요한 모든 과정을 지원합니다.
+                        </h5>
+                        <p>2021.06.15</p>
+                    </div>
+                </a></li>
+                <li><a href="#">
+                    <img src="images/sec4_04.jpeg" alt="">
+                    <div class="tag">
+                        <p>새소식</p>
+                        <p>공지</p>
+                    </div>
+                    <div class="sec4_txt">
+                        <h4>[소상공인 모집중] 스타 상품을 찾습니다! 소상공인<br>
+                            의 상품 판매와 마케팅을 지원합니다.
+                        </h4>
+                        <h5>&nbsp;정부의 온라인 판매 지원사업으로 상품 등록, 배송, 마케<br>
+                            팅 등 판매에 필요한 모든 과정을 지원합니다.
+                        </h5>
+                        <p>2021.06.14</p>
+                    </div>
+                </a></li>
+            </ul>
+        </div>
+    </div>
+    <footer id="footer">
+        <div class="footer_Wrap">
+            <div class="footerTop clearfix">
+                <div class="ftTop_left">
+                    <p>
+                        500여개 업체,<br>3,000종 이상의 제품을 수출한
+                    </p>
+                    <h3>
+                        가비아 글로벌과 함께하세요.
+                    </h3>
+                    <a href="#" class="btn">상담하기</a>
+                </div>
+                <div class="ftTop_right">
+                    <div class="ftR01">
+                         <h4>Sitemap</h4>
+                         <ul>
+                             <li><a href="#">아마존 입점</a></li>
+                             <li><a href="#">알리바바 입점</a></li>
+                             <li><a href="#">쇼핑몰 제작</a></li>
+                             <li><a href="#">국내몰 운영</a></li>
+                             <li><a href="#">새소식</a></li>
+                         </ul>
+                    </div>
+                    <div class="ftR02">
+                         <h4>Family site</h4>
+                         <ul>
+                             <li><a href="#">가비아CNS</a></li>
+                             <li><a href="#">퍼스트몰</a></li>
+                             <li><a href="#">이셀러스</a></li>
+                             <li><a href="#">다이애드</a></li>
+                             <li><a href="#">마젠토코리아</a></li>
+                             <li><a href="#">가비아 홈페이지</a></li>
+                             <li><a href="#">클릭엔</a></li>
+                         </ul>
+                    </div>
+                    <div class="ftR03">
+                        <h4>SNS</h4>
+                        <div class="ft_sns clearfix">
+                            <div class="sns1">
+                                <img src="images/ico_blog.png" alt="">
+                            </div>
+                            <div class="sns2">
+                                <img src="images/ico_youtube.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footerB">
+                <div class="fb_left">
+                    <a href="#">개인정보처리방침</a>
+                </div>
+                <div class="fb_right">
+                    © 2021 GabiaCNS Inc. All Rights Reserved.
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script>
         var swiper = new Swiper(".slider01",{
