--- a/company/index.html
+++ b/company/index.html
@@ -48,7 +48,15 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, autem.</p>
                     </div>
                 </li>
+                <li class="li_2st">
+                    <div class="slideTxt">
+                        <h3>Lorem, ipsum dolor.</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, autem.</p>
+                    </div>
+                </li>
             </ul>
+            <img src="images/next_btn.png" alt="" class="nextBtn">
+            <img src="images/prev_btn.png" alt="" class="prevBtn">
         </div>
     </header>
 </body>
