--- a/04 kensington/index.html
+++ b/04 kensington/index.html
@@ -4,9 +4,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kensington</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/jquery.bxslider.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/jquery.bxslider.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
-    
+    <header id="main_header">
+        <div id="header_top">
+            <h1 class="logo">
+                <a href="#">LOGO</a>
+            </h1>
+            <nav class="gnb">
+                <ul class="submenu clearfix">
+                    <li><a href="#">지점소개</a></li>
+                    <li><a href="#">프로모션</a></li>
+                    <li><a href="#">멤버십</a></li>
+                    <li><a href="#">켄싱턴프렌즈</a></li>
+                    <li><a href="#">켄싱턴매거진</a></li>
+                    <li><a href="#">고객지원</a></li>
+                </ul>
+                <div class="language clearfix">
+                    <div class="kor"><a href="#">KOR</a></div>
+                    <div class="eng"><a href="#">ENG</a></div>
+                </div>
+            </nav>
+            <div class="toggle">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+            </div>
+        </div>
+        <div class="sliderWrap">
+            <ul class="slider">
+                <li class="li_1st">
+                    <div class="slideTxt">
+                        <h3>HOTEL</h3>
+                        <p>고객을 위한 최상의 휴식 공간</p>
+                    </div>
+                </li>
+                <li class="li_2st">
+                    <div class="slideTxt">
+                        <h3>RESORT</h3>
+                        <p>지역 관광 명소와 인접한<br>켄싱턴 리조트</p>
+                    </div>
+                </li>
+                <li class="li_3st">
+                    <div class="slideTxt">
+                        <h3>REWARDS</h3>
+                        <p>켄싱턴 리워즈 회원만을<br>위한 다양한 특전</p>
+                    </div>
+                </li>
+                <li class="li_4st">
+                    <div class="slideTxt">
+                        <h3>EVENT</h3>
+                        <p>켄싱턴 호텔앤리조트에서<br>만나는 더 많은 혜택</p>
+                    </div>
+                </li>
+            </ul>
+            <img src="images/slider1 next.png" alt="" class="nextBtn">
+            <img src="images/slider1 prev.png" alt="" class="prevBtn">
+        </div>
+    </header>
 </body>
 </html>
