--- a/company/index.html
+++ b/company/index.html
@@ -58,6 +58,21 @@
             <img src="images/next_btn.png" alt="" class="nextBtn">
             <img src="images/prev_btn.png" alt="" class="prevBtn">
         </div>
+        <div class="content">
+            <ul class="clearfix">
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+                <li>4</li>
+                <li>5</li>
+                <li>6</li>
+                <li>7</li>
+                <li>8</li>
+                <li>9</li>
+                <li>10</li>
+                <li>11</li>
+            </ul>
+        </div>
     </header>
 </body>
 </html>
